[gd_scene load_steps=35 format=3 uid="uid://b6y6pin36ci3a"]

[ext_resource type="Script" uid="uid://vxaat8qahrnt" path="res://TILE/PlayArea.gd" id="1_7icpg"]
[ext_resource type="Texture2D" uid="uid://bhjemfgxqwnid" path="res://SPRITES/GUI/TileGrid.png" id="2_71ry4"]
[ext_resource type="Texture2D" uid="uid://l8ae5dax4nx5" path="res://SPRITES/MISC/bookworm_ref.jpg" id="2_e8bfe"]
[ext_resource type="Texture2D" uid="uid://mgbvhbvi426i" path="res://SPRITES/MISC/bookworm-adventures-roguelike-mockup.png" id="2_uar81"]
[ext_resource type="Texture2D" uid="uid://dun70qs33eyw2" path="res://SPRITES/GUI/AttackButton.png" id="3_12lua"]
[ext_resource type="Texture2D" uid="uid://nomtrgawfuo0" path="res://SPRITES/MISC/wheres_the_word_at.png" id="4_smuf8"]
[ext_resource type="Texture2D" uid="uid://c1qpp0lb2gk8w" path="res://SPRITES/GUI/SmallButtons.png" id="5_0aufg"]
[ext_resource type="AudioStream" uid="uid://ujwwg2bw7xst" path="res://AUDIO/GOOD.ogg" id="8_7xumo"]
[ext_resource type="AudioStream" uid="uid://cdgkmjcdnybfq" path="res://AUDIO/GREAT.ogg" id="9_h5lsd"]
[ext_resource type="AudioStream" uid="uid://d00yt8ab1bj1n" path="res://AUDIO/EXCELLENT.ogg" id="10_5loyc"]
[ext_resource type="AudioStream" uid="uid://dspgh8bhl5sjy" path="res://AUDIO/AMAZING.ogg" id="11_uar81"]
[ext_resource type="AudioStream" uid="uid://4wn1hl0snedx" path="res://AUDIO/FANTASTIC.ogg" id="12_wpiv4"]
[ext_resource type="AudioStream" uid="uid://b8lmqbqus353p" path="res://AUDIO/tile_sound_attempt3.ogg" id="13_h5lsd"]
[ext_resource type="AudioStream" uid="uid://ckq8n4rwy0cec" path="res://AUDIO/subaluwa_trimmed.ogg" id="14_5loyc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_330oe"]
atlas = ExtResource("5_0aufg")
region = Rect2(0, 48, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8bfe"]
atlas = ExtResource("5_0aufg")
region = Rect2(192, 48, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_smuf8"]
atlas = ExtResource("5_0aufg")
region = Rect2(96, 48, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0aufg"]
atlas = ExtResource("5_0aufg")
region = Rect2(288, 48, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8o0v"]
atlas = ExtResource("5_0aufg")
region = Rect2(0, 72, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y44e"]
atlas = ExtResource("5_0aufg")
region = Rect2(192, 72, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmqyk"]
atlas = ExtResource("5_0aufg")
region = Rect2(96, 72, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8gok"]
atlas = ExtResource("5_0aufg")
region = Rect2(288, 72, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e3an"]
atlas = ExtResource("5_0aufg")
region = Rect2(0, 0, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_14p2g"]
atlas = ExtResource("5_0aufg")
region = Rect2(192, 0, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v88do"]
atlas = ExtResource("5_0aufg")
region = Rect2(96, 0, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y87fe"]
atlas = ExtResource("5_0aufg")
region = Rect2(288, 0, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhykf"]
atlas = ExtResource("5_0aufg")
region = Rect2(0, 24, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8uub"]
atlas = ExtResource("5_0aufg")
region = Rect2(192, 24, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnbtj"]
atlas = ExtResource("5_0aufg")
region = Rect2(96, 24, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwvge"]
atlas = ExtResource("5_0aufg")
region = Rect2(288, 24, 96, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlfoa"]
atlas = ExtResource("3_12lua")
region = Rect2(0, 0, 128, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_exggy"]
atlas = ExtResource("3_12lua")
region = Rect2(256, 0, 128, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6dde"]
atlas = ExtResource("3_12lua")
region = Rect2(128, 0, 128, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx3jp"]
atlas = ExtResource("3_12lua")
region = Rect2(256, 0, 128, 40)

[node name="PlayArea" type="Control" node_paths=PackedStringArray("tile_grid", "to_be_destroyed", "relics_collection")]
custom_minimum_size = Vector2(144, 144)
layout_mode = 3
anchors_preset = 0
offset_left = 496.0
offset_top = 344.0
offset_right = 640.0
offset_bottom = 488.0
scale = Vector2(2, 2)
script = ExtResource("1_7icpg")
tile_grid = NodePath("Grid_Area")
to_be_destroyed = NodePath("ToKill")
relics_collection = NodePath("RelicContainer")

[node name="TextureRect3" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -248.0
offset_top = -172.0
offset_right = 392.0
offset_bottom = 188.0
texture = ExtResource("4_smuf8")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 308.0
offset_bottom = 188.0
texture = ExtResource("2_e8bfe")
expand_mode = 3

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -248.0
offset_top = -172.0
offset_right = 392.0
offset_bottom = 188.0
texture = ExtResource("2_uar81")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 144.0
offset_bottom = 144.0
texture = ExtResource("2_71ry4")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="ShuffleButtonGUI" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -128.0
offset_top = 152.0
offset_right = -16.0
offset_bottom = 192.0
texture = ExtResource("2_71ry4")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="PauseButtonGUI" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 160.0
offset_top = 152.0
offset_right = 272.0
offset_bottom = 192.0
texture = ExtResource("2_71ry4")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="PlayButtonGUI" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_top = 136.0
offset_right = 144.0
offset_bottom = 192.0
texture = ExtResource("2_71ry4")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="GridContainer" type="GridContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 4

[node name="GuidePoints" type="Node2D" parent="."]

[node name="Column1Drop" type="Marker2D" parent="GuidePoints"]
position = Vector2(8, -32)

[node name="TileBagStartPoint" type="Marker2D" parent="GuidePoints"]
position = Vector2(352, -124)

[node name="TileBagGridStartPoint" type="Marker2D" parent="GuidePoints"]
position = Vector2(-200, -116)

[node name="RelicBarStartPoint" type="Marker2D" parent="GuidePoints"]
position = Vector2(-216, -132)

[node name="Column1Drop2" type="Marker2D" parent="GuidePoints"]
visible = false
position = Vector2(8, 156)

[node name="Column2Drop" type="Marker2D" parent="GuidePoints"]
visible = false
position = Vector2(40, -32)

[node name="Column3Drop" type="Marker2D" parent="GuidePoints"]
visible = false
position = Vector2(72, -32)

[node name="Column4Drop" type="Marker2D" parent="GuidePoints"]
visible = false
position = Vector2(104, -32)

[node name="Index0" type="Marker2D" parent="GuidePoints"]
position = Vector2(8, 8)

[node name="Index1" type="Marker2D" parent="GuidePoints"]
position = Vector2(40, 8)

[node name="Index2" type="Marker2D" parent="GuidePoints"]
position = Vector2(72, 8)

[node name="Index3" type="Marker2D" parent="GuidePoints"]
position = Vector2(104, 8)

[node name="Index4" type="Marker2D" parent="GuidePoints"]
position = Vector2(8, 40)

[node name="Index5" type="Marker2D" parent="GuidePoints"]
position = Vector2(40, 40)

[node name="Index6" type="Marker2D" parent="GuidePoints"]
position = Vector2(72, 40)

[node name="Index7" type="Marker2D" parent="GuidePoints"]
position = Vector2(104, 40)

[node name="Index8" type="Marker2D" parent="GuidePoints"]
position = Vector2(8, 72)

[node name="Index9" type="Marker2D" parent="GuidePoints"]
position = Vector2(40, 72)

[node name="Index10" type="Marker2D" parent="GuidePoints"]
position = Vector2(72, 72)

[node name="Index11" type="Marker2D" parent="GuidePoints"]
position = Vector2(104, 72)

[node name="Index12" type="Marker2D" parent="GuidePoints"]
position = Vector2(8, 104)

[node name="Index13" type="Marker2D" parent="GuidePoints"]
position = Vector2(40, 104)

[node name="Index14" type="Marker2D" parent="GuidePoints"]
position = Vector2(72, 104)

[node name="Index15" type="Marker2D" parent="GuidePoints"]
position = Vector2(104, 104)

[node name="Grid_Area" type="Node2D" parent="."]
z_as_relative = false

[node name="ToKill" type="Node2D" parent="."]

[node name="RelicContainer" type="Node2D" parent="."]

[node name="TestButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -184.0
offset_top = 68.0
offset_right = -88.0
offset_bottom = 92.0
texture_normal = SubResource("AtlasTexture_330oe")
texture_pressed = SubResource("AtlasTexture_e8bfe")
texture_hover = SubResource("AtlasTexture_smuf8")
texture_disabled = SubResource("AtlasTexture_0aufg")
ignore_texture_size = true
stretch_mode = 0

[node name="RelicButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 232.0
offset_top = 68.0
offset_right = 328.0
offset_bottom = 92.0
texture_normal = SubResource("AtlasTexture_e8o0v")
texture_pressed = SubResource("AtlasTexture_6y44e")
texture_hover = SubResource("AtlasTexture_jmqyk")
texture_disabled = SubResource("AtlasTexture_u8gok")
ignore_texture_size = true
stretch_mode = 0

[node name="WordLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -24.0
offset_top = -132.0
offset_right = 168.0
offset_bottom = -109.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -24.0
offset_top = -36.0
offset_right = 168.0
offset_bottom = -13.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Good" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_7xumo")

[node name="Great" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_h5lsd")

[node name="Excellent" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_5loyc")

[node name="Amazing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_uar81")

[node name="Fantastic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_wpiv4")

[node name="TileSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_h5lsd")
max_polyphony = 20

[node name="Subaluwa" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_5loyc")

[node name="ShuffleButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -120.0
offset_top = 160.0
offset_right = -24.0
offset_bottom = 184.0
texture_normal = SubResource("AtlasTexture_5e3an")
texture_pressed = SubResource("AtlasTexture_14p2g")
texture_hover = SubResource("AtlasTexture_v88do")
texture_disabled = SubResource("AtlasTexture_y87fe")
ignore_texture_size = true
stretch_mode = 0

[node name="PauseButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 168.0
offset_top = 160.0
offset_right = 264.0
offset_bottom = 184.0
texture_normal = SubResource("AtlasTexture_fhykf")
texture_pressed = SubResource("AtlasTexture_n8uub")
texture_hover = SubResource("AtlasTexture_hnbtj")
texture_disabled = SubResource("AtlasTexture_dwvge")
ignore_texture_size = true
stretch_mode = 0

[node name="PlayButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 144.0
offset_right = 136.0
offset_bottom = 184.0
disabled = true
texture_normal = SubResource("AtlasTexture_wlfoa")
texture_pressed = SubResource("AtlasTexture_exggy")
texture_hover = SubResource("AtlasTexture_p6dde")
texture_disabled = SubResource("AtlasTexture_bx3jp")

[connection signal="pressed" from="TestButton" to="." method="_on_test_button_pressed"]
[connection signal="pressed" from="RelicButton" to="." method="_on_relic_button_pressed"]
[connection signal="pressed" from="ShuffleButton" to="." method="_on_shuffle_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
